# biodisp_cuda

./: .gitignore  CMakeLists.txt  README.md
data/: filters.txt
include/: Filters.h  Population.h  conv_common.h  quantities.h
src/: Filters.cpp  Population.cpp  conv.cu  main.cpp
